Fix MIDI player wrapping

--- a/css/MIDIPlayer.css
+++ b/css/MIDIPlayer.css
@@ -23,6 +23,11 @@ div#playerdiv {
 	text-align: center;
 }
 div.player {
+	display: inline-flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	gap: 8px;
 	background-image: -webkit-gradient(linear,left top,left bottom,from(rgba(66,66,66,1)),to(rgba(22,22,22,1)));
 	background-image: -webkit-linear-gradient(top, rgba(66, 66, 66, 1) 0%, rgba(22, 22, 22, 1) 100%);
 	background-image: -moz-linear-gradient(top, rgba(66, 66, 66, 1) 0%, rgba(22, 22, 22, 1) 100%);
@@ -38,7 +43,7 @@ div.player {
 	color: rgba(255, 255, 255, 0.8);
 	text-shadow: 1px 1px 2px #000;
 	-moz-text-shadow: 1px 1px 2px #000;
-	height: 33px; 
+	min-height: 33px; 
 	margin: 0 auto; 
 	float: right;
 }
@@ -48,6 +53,7 @@ div.player button {
     height: 23px;
     width: 23px;
     border-radius: 11px;
+	flex: 0 0 auto;
 }
 
 
